update fc notebooks

--- a/fc_visual.ipynb
+++ b/fc_visual.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,24 @@
     "axes = fig.add_subplot(111)\n",
     "sns.heatmap(df)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(210, 483)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = np.loadtxt(\"/home/yat-lok/workspace/S122817_output/fMRI/rfMRI.ica/ts_roied_TVBSchaeferTian420.txt\")\n",
+    "print(np.shape(df))"
    ]
   }
  ],
